# router/auth.js
@@ -2,6 +2,9 @@ const express = require('express')
 const router = express.Router();
 const controller = require('../app/controller')
 
+//import passport
+const passport = require('../utils/passport')
+
 router.post('/api/v2/auth/login', controller.auth.login)
 router.post('/api/v2/auth/register', controller.auth.register)
 
@@ -9,6 +12,16 @@ router.post('/api/v2/auth/register', controller.auth.register)
 router.get('/register', (req, res)=>{
     res.render('register.ejs')
 })
+router.post('/register', controller.auth.registerForm)
+
+
+router.get('/login', (req, res)=>{
+    res.render('login.ejs')
+})
+router.post('/login', passport.authenticate('local', {
+    successRedirect: '/dashboard',
+    failureRedirect: '/login'
+}))
     
 
 
