# router/users.js
@@ -10,11 +10,11 @@ const controller = require('../app/controller')
 // router.put('/users/:id',update);
 // router.delete('/users/:id',destroy);
 
-router.get('/users', controller.users.get);
-router.get('/users/:id', controller.users.getById);
-router.post('/users', controller.users.create);
-router.put('/users/:id',controller.users.update);
-router.delete('/users/:id',controller.users.destroy);
+// router.get('/users', controller.users.get);
+// router.get('/users/:id', controller.users.getById);
+// router.post('/users', controller.users.create);
+// router.put('/users/:id',controller.users.update);
+// router.delete('/users/:id',controller.users.destroy);
 
 router.get('/api/v2/users', controller.usersV2.get);
 router.get('/api/v2/users/:id', controller.usersV2.getById);
